crates/ty_python_types/resources/mdtest/snapshots/attribute_assignment…_-_Attribute_assignment_-_Possibly-missing_att…_(e603e3da35f55c73).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: attribute_assignment.md - Attribute assignment - Possibly-missing attributes
mdtest path: crates/ty_python_types/resources/mdtest/diagnostics/attribute_assignment.md
---

# Python source files

## mdtest_snippet.py

```
1 | def _(flag: bool) -> None:
2 |     class C:
3 |         if flag:
4 |             attr: int = 0
5 | 
6 |     C.attr = 1  # error: [possibly-missing-attribute]
7 | 
8 |     instance = C()
9 |     instance.attr = 1  # error: [possibly-missing-attribute]
```

# Diagnostics

```
warning[possibly-missing-attribute]: Attribute `attr` may be missing on class `C`
 --> src/mdtest_snippet.py:6:5
  |
4 |             attr: int = 0
5 |
6 |     C.attr = 1  # error: [possibly-missing-attribute]
  |     ^^^^^^
7 |
8 |     instance = C()
  |
info: rule `possibly-missing-attribute` is enabled by default

```

```
warning[possibly-missing-attribute]: Attribute `attr` may be missing on object of type `C`
 --> src/mdtest_snippet.py:9:5
  |
8 |     instance = C()
9 |     instance.attr = 1  # error: [possibly-missing-attribute]
  |     ^^^^^^^^^^^^^
  |
info: rule `possibly-missing-attribute` is enabled by default

```
